# virt-v2v

./: .gitignore  .gitmodules  Makefile.am  README  TODO  bootstrap  bugs-in-changelog.sh  config.sh.in  configure.ac  installcheck.sh.in  ocaml-dep.sh.in  ocaml-link.sh.in  podwrapper.pl.in  run.in  subdir-rules.mk  valgrind-suppressions  zanata.xml
bash/: Makefile.am  test-complete-in-script.sh  virt-v2v  virt-v2v-copy-to-local
convert/: Makefile.am  choose_root.ml  choose_root.mli  convert.ml  convert.mli  convert_linux.ml  convert_linux.mli  convert_types.ml  convert_types.mli  convert_windows.ml  convert_windows.mli  firmware.ml  firmware.mli  inspect_source.ml  inspect_source.mli  libosinfo-c.c  libosinfo.ml  libosinfo.mli  libosinfo_utils.ml  libosinfo_utils.mli  linux.ml  linux.mli  linux_bootloaders.ml  linux_bootloaders.mli  linux_kernels.ml  linux_kernels.mli  mount_filesystems.ml  mount_filesystems.mli  target_bus_assignment.ml  target_bus_assignment.mli  windows.ml  windows.mli  windows_virtio.ml  windows_virtio.mli
docs/: Makefile.am  test-docs.sh  test-v2v-docs.sh  virt-v2v-copy-to-local.pod  virt-v2v-hacking.pod  virt-v2v-in-place.pod  virt-v2v-input-vmware.pod  virt-v2v-input-xen.pod  virt-v2v-inspector.pod  virt-v2v-output-local.pod  virt-v2v-output-openstack.pod  virt-v2v-output-ovirt.pod  virt-v2v-output-rhv.pod  virt-v2v-release-notes-1.42.pod  virt-v2v-release-notes-2.0.pod  virt-v2v-release-notes-2.10.pod  virt-v2v-release-notes-2.12.pod  virt-v2v-release-notes-2.2.pod  virt-v2v-release-notes-2.4.pod  virt-v2v-release-notes-2.6.pod  virt-v2v-release-notes-2.8.pod  virt-v2v-show-roots.pod  virt-v2v-support.pod  virt-v2v.pod  vm-generation-id-across-hypervisors.txt
gnulib/lib/: Makefile.am  hash.h
input/: Makefile.am  OVA.ml  OVA.mli  OVF.ml  OVF.mli  VMX.ml  input.ml  input.mli  input_disk.ml  input_disk.mli  input_libvirt.ml  input_libvirt.mli  input_ova.ml  input_ova.mli  input_vcenter_https.ml  input_vcenter_https.mli  input_vddk.ml  input_vddk.mli  input_vmx.ml  input_vmx.mli  input_xen_ssh.ml  input_xen_ssh.mli  name_from_disk.ml  name_from_disk.mli  nbdkit_curl.ml  nbdkit_curl.mli  nbdkit_ssh.ml  nbdkit_ssh.mli  nbdkit_vddk.ml  nbdkit_vddk.mli  parse_domain_from_vmx.ml  parse_domain_from_vmx.mli  parse_libvirt_xml.ml  parse_libvirt_xml.mli  parse_vmx.ml  select_input.ml  select_input.mli  ssh.ml  ssh.mli  vCenter.ml  (+1 more)
inspector/: Makefile.am  create_inspector_xml.ml  create_inspector_xml.mli  inspector.ml  inspector.mli  test-docs.sh  virt-v2v-inspector.pod
lib/: DOM.mli  Makefile.am  NBD_URI.ml  NBD_URI.mli  YAML.ml  YAML.mli  config.ml.in  config.mli  create_ovf.ml  create_ovf.mli  guestfs-internal-all.h  libvirt_utils.ml  libvirt_utils.mli  nbdkit.ml  nbdkit.mli  networks.ml  networks.mli  qemuNBD.ml  qemuNBD.mli  types.ml  types.mli  utils.ml  utils.mli
output/: Makefile.am  changeuid.ml  changeuid.mli  create_json.ml  create_json.mli  create_kubevirt_yaml.ml  create_kubevirt_yaml.mli  create_libvirt_xml.ml  create_libvirt_xml.mli  openstack_image_properties.ml  openstack_image_properties.mli  output.ml  output.mli  output_disk.ml  output_disk.mli  output_glance.ml  output_glance.mli  output_json.ml  output_json.mli  output_kubevirt.ml  output_kubevirt.mli  output_libvirt.ml  output_libvirt.mli  output_null.ml  output_null.mli  output_openstack.ml  output_openstack.mli  output_ovirt.ml  output_ovirt.mli  output_ovirt_upload.ml  output_ovirt_upload.mli  output_qemu.ml  output_qemu.mli  output_rhv.ml  output_rhv.mli  output_rhv_upload.ml  output_rhv_upload.mli  output_vdsm.ml  output_vdsm.mli  ovirt-upload-cancel.py  (+21 more)
show-roots/: Makefile.am  show_roots.ml  show_roots.mli
test-data/fake-virtio-win/: Makefile.am  virtio-win-drivers-list.txt  virtio-win-iso-list.txt
test-data/phony-guests/: Makefile.am  fedora-db.sql.xz  fedora.c  guests.xml.in  make-fedora-img.pl  make-windows-img.sh  make-windows-multi-disk-img.sh  win10-software.reg  win11-software.reg  win2k22-software.reg  win2k25-software.reg  win7-32-software.reg  windows-bcd.reg  windows-software-all.reg  windows-software.reg  winxp-32-software.reg
tests/: Makefile.am  functions.sh.in  rhbz1232192.sh  rhbz1232192.xml  rhbz1232192.xml.in  test-bad-networks-and-bridges.sh  test-block-driver.sh  test-cdrom.expected  test-cdrom.sh  test-cdrom.xml.in  test-checksum-bad.sh  test-checksum-good-qcow2.sh  test-checksum-good.sh  test-checksum-print.sh  test-collect.sh  test-conversion-of.sh  test-customize.sh  test-fedora-btrfs-conversion.sh  test-fedora-conversion.sh  test-fedora-luks-on-lvm-conversion.sh  test-fedora-lvm-on-luks-conversion.sh  test-fedora-md-conversion.sh  test-floppy.expected  test-floppy.sh  test-floppy.xml.in  test-functions.sh  test-i-disk-nbd.sh  test-i-disk-parallel.sh  test-i-disk.sh  test-i-ova-as-root.sh  test-i-ova-bad-sha1.sh  test-i-ova-bad-sha256.sh  test-i-ova-directory.sh  test-i-ova-formats.sh  test-i-ova-good-checksums.sh  test-i-ova-gz.expected  test-i-ova-gz.sh  test-i-ova-invalid-manifest1.sh  test-i-ova-invalid-manifest2.sh  test-i-ova-snapshots.expected2  (+178 more)
tests/test-o-ovirt-upload-module/: imageio.py
tests/test-o-ovirt-upload-module/ovirtsdk4/: __init__.py  types.py
tests/test-o-rhv-upload-module/: imageio.py
tests/test-v2v-o-rhv-upload-module/: imageio.py
v2v/: DOM.ml  Makefile.am  changeuid.ml  cmdline.ml  cmdline.mli  convert_linux.ml  convert_linux.mli  convert_windows.ml  convert_windows.mli  copy_to_local.ml  create_json.ml  create_json.mli  create_libvirt_xml.ml  create_libvirt_xml.mli  create_ovf.ml  create_ovf.mli  input_disk.ml  input_disk.mli  input_libvirt.ml  input_libvirt.mli  input_libvirt_other.ml  input_libvirt_other.mli  input_libvirt_vcenter_https.ml  input_libvirt_vcenter_https.mli  input_libvirt_vddk.ml  input_libvirt_vddk.mli  input_libvirt_xen_ssh.ml  input_libvirt_xen_ssh.mli  input_libvirtxml.ml  input_libvirtxml.mli  input_ova.ml  input_ova.mli  input_vmx.ml  inspect_source.ml  inspect_source.mli  libosinfo-c.c  libosinfo.ml  libosinfo_utils.ml  libosinfo_utils.mli  libvirt_utils.ml  (+70 more)
v2v/test-harness/: Makefile.am
(+107 files in other folders)
